# RaytraceGroundUp

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
app/: CMakeLists.txt  main.cpp
app/UserInterace/: STBIRenderer.cpp
app/UserInterface/: RenderInterface.cpp  STBIRenderer.cpp
include/BRDFs/: BRDF.h  Lambertian.h
include/Cameras/: Camera.h  OrthographicCamera.h  Pinhole.h
include/GeometricObjects/: GeometricObject.h  Plane.h  Sphere.h
include/Lights/: Ambient.h  Light.h  PointLight.h
include/Materials/: Material.h  Matte.h
include/Samplers/: Hammersley.h  Jittered.h  MultiJittered.h  NRooks.h  Regular.h  Sampler.h
include/Tracers/: MultipleObjects.h  Raycast.h  SingleSphere.h  Tracer.h
include/UserInterface/: RenderInterface.h  STBIRenderer.h
include/Utilities/: Maths.h  ShadeRec.h
include/World/: ViewPlane.h  World.h
src/: CMakeLists.txt
src/BRFDs/: BRDF.cpp  Lambertian.cpp
src/Cameras/: Camera.cpp  OrthographicCamera.cpp  Pinhole.cpp
src/GeometricObjects/: GeometricObject.cpp  Plane.cpp  Sphere.cpp
src/Lights/: Ambient.cpp  Light.cpp  PointLight.cpp
src/Materials/: Material.cpp  Matte.cpp
src/Samplers/: Hammersley.cpp  Jittered.cpp  MultiJittered.cpp  NRooks.cpp  Regular.cpp  Sampler.cpp
src/Tracers/: MultipleObjects.cpp  Raycast.cpp  SingleSphere.cpp  Tracer.cpp
src/Utilities/: Matrix.cpp  Normal.cpp  Point2D.cpp  Point3D.cpp  RGBColor.cpp  Ray.cpp  ShadeRec.cpp  Vector3D.cpp
src/World/: ViewPlane.cpp  World.cpp
test/: CMakeLists.txt  main.cpp
